--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,8 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'>
   </head>
   <body>
-    <header>
-      <h1>This is the index.html</h1>
-    </header>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <script src="/bundle.js" type="text/javascript"></script>
   </body>
 </html>
